# subtitle-fast

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README-zh.md  README.md  TODO.md  config.toml.example  video_controls.html
.cargo/: config.toml
.github/workflows/: ci.yml  macos-ui-ci.yml  rust-ci.yml
crates/gpui/: Cargo.toml  build.rs
crates/gpui/examples/: image_gallery.rs
crates/gpui/examples/nv12/: nv12.rs
crates/gpui/examples/video/: cvpixelbuffer.rs  video.rs
crates/gpui/src/: app.rs  assets.rs  gpui.rs  interactive.rs  platform.rs  scene.rs  window.rs
crates/gpui/src/elements/: div.rs  mod.rs  surface.rs  video.rs
crates/gpui/src/platform/blade/: blade_atlas.rs  blade_renderer.rs
crates/gpui/src/platform/linux/wayland/: window.rs
crates/gpui/src/platform/linux/x11/: window.rs
crates/gpui/src/platform/mac/: metal_atlas.rs  metal_renderer.rs  platform.rs  shaders.metal  window.rs
crates/gpui/src/platform/windows/: directx_atlas.rs  directx_renderer.rs  platform.rs  shaders.hlsl  window.rs
crates/subtitle-fast/: Cargo.toml  README.md
crates/subtitle-fast-comparator/: Cargo.toml  README.md
crates/subtitle-fast-comparator/examples/: bench.rs  compare_roi.rs  compare_roi_sequence.rs  dump.rs
crates/subtitle-fast-comparator/examples/common/: roi_examples.rs
crates/subtitle-fast-comparator/src/: chamfer_edge.rs  factory.rs  feature.rs  hybrid_mask.rs  lib.rs  ops.rs  preprocess.rs  spectral_hash.rs  structural_dssim.rs  tests.rs
crates/subtitle-fast-comparator/src/comparators/: bitset_cover.rs  chamfer_edge.rs  hybrid_mask.rs  mod.rs  sparse_chamfer.rs  spectral_hash.rs  structural_dssim.rs
crates/subtitle-fast-comparator/src/pipeline/: feature.rs  mod.rs  ops.rs  preprocess.rs
crates/subtitle-fast-decoder/: Cargo.toml  README.md  build.rs
crates/subtitle-fast-decoder/examples/: bench.rs  decoder_dump.rs  dump.rs  video_info.rs
crates/subtitle-fast-decoder/src/: config.rs  core.rs  lib.rs
crates/subtitle-fast-decoder/src/backends/: ffmpeg.rs  gstreamer.rs  mft.rs  mft_bridge.cpp  mock.rs  mod.rs  openh264.rs  videotoolbox.rs
crates/subtitle-fast-decoder/src/backends/dxva/: dxva_bridge.cpp  mod.rs
crates/subtitle-fast-decoder/src/backends/mft/: mft_bridge.cpp  mod.rs
crates/subtitle-fast-decoder/src/backends/videotoolbox/: mod.rs  videotoolbox_bridge.m
crates/subtitle-fast-decoder/src/core/: mod.rs
crates/subtitle-fast-decoder/tests/: ffmpeg_stream.rs  openh264_stream.rs  output_format.rs  videotoolbox_stream.rs
crates/subtitle-fast-ocr/: Cargo.toml  README.md  build.rs
crates/subtitle-fast-ocr/src/: engine.rs  error.rs  lib.rs  plane.rs  region.rs  request.rs  response.rs
crates/subtitle-fast-ocr/src/backends/: mod.rs  onnx.rs
crates/subtitle-fast-ocr/src/backends/mlx/: mlx_vlm_bridge.m  mod.rs
crates/subtitle-fast-ocr/src/backends/vision/: mod.rs  vision_bridge.m
crates/subtitle-fast-ocr/src/macos/: mod.rs
crates/subtitle-fast-sink/: Cargo.toml  build.rs
crates/subtitle-fast-sink/src/: config.rs  detection.rs  dump.rs  lib.rs  sampler.rs  sink.rs  subtitle_detection.rs
crates/subtitle-fast-sink/src/subtitle_detection/: luma_band.rs  mod.rs  onnx.rs  vision.rs  vision_bridge.m
crates/subtitle-fast-types/: Cargo.toml
crates/subtitle-fast-types/src/: lib.rs
crates/subtitle-fast-validator/: Cargo.toml  README.md  build.rs
crates/subtitle-fast-validator/examples/: bench.rs  demo_png.rs  detector_bench.rs  dump.rs
crates/subtitle-fast-validator/src/: config.rs  detection.rs  dump.rs  lib.rs  validator.rs
crates/subtitle-fast-validator/src/subtitle_detection/: integral_band.rs  luma_band.rs  mod.rs  onnx.rs  projection_band.rs  vision.rs
crates/subtitle-fast-validator/src/subtitle_detection/vision/: mod.rs
crates/subtitle-fast/examples/: gpui_test.rs
crates/subtitle-fast/src/: backend.rs  cli.rs  lib.rs  main.rs  model.rs  pipeline.rs  progress.rs  sampler.rs  settings.rs  sorter.rs  stage.rs  subtitle.rs
crates/subtitle-fast/src/gui/: app.rs  assets.rs  frame_image.rs  icons.rs  mod.rs  runtime.rs  session.rs  state.rs  theme.rs
crates/subtitle-fast/src/gui/components/: animated_panel.rs  color_picker.rs  control_panel.rs  draggable_edge.rs  mod.rs  preview.rs  resizable_panel.rs  sidebar.rs  status_panel.rs  subtitle_list.rs  task_sidebar.rs  titlebar.rs  video_controls.rs  video_luma_controls.rs  video_player.rs  video_roi_overlay.rs  video_toolbar.rs
crates/subtitle-fast/src/gui/components/detection_sidebar/: controls.rs  host.rs  metrics.rs  mod.rs  panel.rs  subtitles.rs
crates/subtitle-fast/src/output/: error.rs  image.rs  json.rs  manager.rs  mod.rs  types.rs  util.rs
crates/subtitle-fast/src/stage/: averager.rs  comparator.rs  detection.rs  detector.rs  determiner.rs  lifecycle.rs  merge.rs  mod.rs  ocr.rs  progress.rs  progress_gui.rs  sampler.rs  segmenter.rs  sorter.rs  subtitle_gen.rs  writer.rs
crates/subtitle-fast/src/tools/: mod.rs  yplane.rs
scripts/: build-ffmpeg-min.sh  evaluate_detection.py
src/: config.rs  main.rs
src/backends/: gstreamer.rs  mock.rs  mod.rs  videotoolbox.rs
tests/: ffmpeg_stream.rs  mock_stream.rs  openh264_stream.rs  videotoolbox_stream.rs
ui-macos/: .gitignore
ui-macos/scripts/: make-dmg.sh
ui-macos/subtitle-fast/: AppLanguage.swift  ContentView.swift  ControlPanel.swift  DetectionSession.swift  NativeSplitView.swift  NotificationManager.swift  PreviewPanel.swift  SidebarView.swift  StatusPanel.swift  SubtitleFastApp.swift  SubtitleFastFFI.swift  SubtitleListView.swift  Utilities.swift  subtitle_fastApp.swift
ui-macos/subtitle-fast.xcodeproj/: project.pbxproj
ui-macos/subtitle-fast/Preview/: HighlightMaskRenderer.swift  PlaybackControls.swift  PreviewHeaderControls.swift  PreviewPanel.swift  SamplingViews.swift  SelectionOverlay.swift  VideoCanvas.swift
ui-macos/subtitle-fast/en.lproj/: Localizable.strings
ui-macos/subtitle-fast/zh-Hans.lproj/: Localizable.strings
