[workspace]
members = [
    "crates/subtitle-fast-types",
    "crates/subtitle-fast",
    "crates/subtitle-fast-comparator",
    "crates/subtitle-fast-decoder",
    "crates/subtitle-fast-ocr",
    "crates/subtitle-fast-validator",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
