[package]
name = "subtitle-fast-comparator"
version = "0.1.0"
edition = "2024"

[dependencies]
subtitle-fast-decoder = { path = "../subtitle-fast-decoder", default-features = false }
subtitle-fast-validator = { path = "../subtitle-fast-validator", default-features = false, features = ["detector-parallel"] }
