[package]
name = "subtitle-fast-decoder"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
backend-ffmpeg = ["dep:ffmpeg-next"]
backend-videotoolbox = [
    "dep:mp4",
    "dep:rayon",
]
backend-openh264 = ["dep:openh264", "dep:mp4", "dep:rayon"]

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"

ffmpeg-next = { version = "8", optional = true }
openh264 = { version = "0.9", optional = true }
mp4 = { version = "0.14", optional = true }
rayon = { version = "1.10", optional = true }

[build-dependencies]
cc = "1"
