[package]
name = "subtitle-fast-decoder"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = [
    "backend-ffmpeg",
    "backend-videotoolbox",
    "backend-mft",
    "backend-dxva",
]
backend-ffmpeg = ["dep:ffmpeg-next"]
backend-videotoolbox = ["dep:mp4", "dep:rayon"]
backend-mft = []
backend-dxva = []

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1"

ffmpeg-next = { version = "8", optional = true, default-features = false, features = [
    "codec",
    "format",
    "filter",
] }
mp4 = { version = "0.14", optional = true }
rayon = { version = "1.10", optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
png = "0.18"
indicatif = "0.17"

[[example]]
name = "decoder-bench"
path = "examples/bench.rs"

[[example]]
name = "decoder-dump"
path = "examples/dump.rs"
