[package]
name = "subtitle-fast-ocr"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["engine-vision", "engine-onnx"]
engine-vision = []
engine-onnx = ["dep:ndarray", "dep:once_cell", "dep:ort"]

[dependencies]
subtitle-fast-decoder = { path = "../subtitle-fast-decoder", default-features = false }
thiserror = "2"
ndarray = { version = "0.15", default-features = false, features = ["std"], optional = true }
once_cell = { version = "1.19", optional = true }
ort = { version = "1.16.3", optional = true }

[build-dependencies]
cc = "1"
