[package]
name = "subtitle-fast-ocr"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["engine-vision"]
engine-vision = []
engine-mlx-vlm = []

[dependencies]
subtitle-fast-decoder = { path = "../subtitle-fast-decoder", default-features = false }
thiserror = "2"

[build-dependencies]
cc = "1"
