[package]
name = "subtitle-fast-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24", default-features = false, features = ["jpeg"] }
subtitle-fast-decoder = { path = "../subtitle-fast-decoder", default-features = false }
tokio = { version = "1", features = ["rt", "sync", "fs"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
