[package]
name = "subtitle-fast-validator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["detector-onnx", "detector-vision"]
detector-onnx = ["dep:ndarray", "dep:once_cell", "dep:ort"]
detector-vision = []

[dependencies]
subtitle-fast-decoder = { path = "../subtitle-fast-decoder", default-features = false }
tokio = { version = "1", features = ["rt", "sync"] }
thiserror = "1"
ort = { version = "1.16.3", optional = true }

ndarray = { version = "0.15", default-features = false, features = [
    "std",
], optional = true }

serde = { version = "1", features = ["derive"] }
once_cell = { version = "1.19", optional = true }

[build-dependencies]
cc = "1"
