[package]
name = "subtitle-fast"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = ["detector-vision", "detector-parallel", "ocr-vision"]
detector-vision = ["subtitle-fast-validator/detector-vision"]
detector-parallel = ["subtitle-fast-validator/detector-parallel"]
ocr-vision = ["subtitle-fast-ocr/engine-vision"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5"
futures-util = "0.3"
indicatif = "0.18"
subtitle-fast-comparator = { path = "../subtitle-fast-comparator" }
serde = { version = "1", features = ["derive"] }
subtitle-fast-decoder = { path = "../subtitle-fast-decoder" }
subtitle-fast-validator = { path = "../subtitle-fast-validator", default-features = false }
subtitle-fast-ocr = { path = "../subtitle-fast-ocr" }
tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
