[package]
name = "subtitle-fast"
version = "0.1.0"
edition = "2024"
default-run = "subtitle-fast-cli"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "subtitle-fast-cli"
path = "src/main.rs"

[features]
default = ["detector-vision", "ocr-vision"]
detector-vision = ["subtitle-fast-validator/detector-vision"]
ocr-vision = ["subtitle-fast-ocr/engine-vision"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5"
futures-util = "0.3"
indicatif = "0.18"
subtitle-fast-comparator = { path = "../subtitle-fast-comparator" }
serde = { version = "1", features = ["derive"] }
subtitle-fast-decoder = { path = "../subtitle-fast-decoder" }
subtitle-fast-validator = { path = "../subtitle-fast-validator", default-features = false }
subtitle-fast-ocr = { path = "../subtitle-fast-ocr" }
subtitle-fast-types = { path = "../subtitle-fast-types" }
tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
parking_lot = "0.12"
png = "0.18"

[dev-dependencies]
tempfile = "3"
